# TORdex

./: .env.example  .gitignore  Cargo.toml  README.md  docker-compose.yml
.github/workflows/: ci.yml
collectors/filesystem/: Cargo.toml
collectors/git/: Cargo.toml
collectors/git/src/: lib.rs
collectors/http/: Cargo.toml
collectors/rss/: Cargo.toml
collectors/tor/: Cargo.toml
crates/agents/: Cargo.toml
crates/agents/src/: lib.rs
crates/ai-runtime/: Cargo.toml
crates/ai-runtime/src/: classification.rs  embeddings.rs  lib.rs  llm.rs  models.rs  ner.rs  reasoning.rs  summarization.rs  translation.rs
crates/algorithms/: Cargo.toml
crates/algorithms/src/: graphs.rs  lib.rs  scheduling.rs  searching.rs  similarity.rs  storage.rs
crates/apps/: Cargo.toml
crates/apps/src/: lib.rs  profiles.rs
crates/cluster/: Cargo.toml
crates/cluster/src/: lib.rs  node.rs  scheduler.rs  task.rs  worker.rs
crates/config/: Cargo.toml
crates/config/src/: lib.rs
crates/core/: Cargo.toml
crates/core/src/: agent.rs  driver.rs  error.rs  event.rs  event_store.rs  id.rs  ipc.rs  lib.rs  memory.rs  object.rs  plugin.rs  policy.rs  processor.rs  scheduler.rs  security.rs  storage.rs
crates/decision/: Cargo.toml
crates/decision/src/: lib.rs  question.rs
crates/decision/src/analyzers/: mod.rs
crates/drivers/: Cargo.toml
crates/drivers/src/: dns.rs  filesystem.rs  http.rs  lib.rs
crates/errors/: Cargo.toml
crates/events/: Cargo.toml
crates/events/src/: bus.rs  in_memory.rs  lib.rs  redis_bus.rs
crates/fabric/: Cargo.toml
crates/fabric/src/: crawler.rs  fabric.rs  lib.rs  queue.rs  session.rs
crates/gpu/: Cargo.toml
crates/gpu/src/: cpu.rs  lib.rs
crates/knowledge/: Cargo.toml
crates/knowledge/src/: canonical.rs  confidence.rs  dedup.rs  fingerprint.rs  identity.rs  lib.rs  provenance.rs  record.rs  versioning.rs
crates/memory/: Cargo.toml
crates/memory/src/: consolidation.rs  episodic.rs  lib.rs  long_term.rs  procedural.rs  semantic.rs  short_term.rs  working.rs
crates/monitoring/: Cargo.toml
crates/monitoring/src/: engine.rs  lib.rs  watcher.rs
crates/monitoring/src/watchers/: api.rs  cve.rs  mod.rs  onion.rs  organization.rs  package.rs  repository.rs  threat.rs
crates/package-intel/: Cargo.toml
crates/package-intel/src/: apt.rs  cargo.rs  composer.rs  docker.rs  golang.rs  gradle.rs  lib.rs  maven.rs  npm.rs  nuget.rs  oci.rs  pacman.rs  pypi.rs
crates/plugins/: Cargo.toml
crates/policy/: Cargo.toml
crates/processors/: Cargo.toml
crates/processors/src/: ai_runtime_processor.rs  algorithm_engine.rs  ast.rs  binary.rs  category_theory.rs  containers.rs  decompiler.rs  graph_theory.rs  html.rs  images.rs  information_theory.rs  knowledge_processor.rs  lib.rs  markdown.rs  network.rs  ocr.rs  office.rs  optimization.rs  package_intel_processor.rs  pdf.rs  probability.rs  processing_fabric.rs  repo_intel_processor.rs  repositories.rs  search_processor.rs  set_theory.rs  temporal_algebra.rs  temporal_graph_processor.rs  vector_spaces.rs  video.rs
crates/repo-intel/: Cargo.toml
crates/repo-intel/src/: analysis.rs  language.rs  lib.rs  parser.rs
crates/search/: Cargo.toml
crates/search/src/: index.rs  lib.rs  strategies.rs
crates/source-registry/: Cargo.toml
crates/source-registry/src/: descriptor.rs  lib.rs  pg_registry.rs
crates/tdxl/: Cargo.toml
crates/tdxl/examples/: compile.rs  full_demo.tdxl  onion_search.tdxl
crates/tdxl/src/: ast.rs  compiler.rs  error.rs  kir.rs  lexer.rs  lib.rs  optimizer.rs  parser.rs  query_optimizer.rs  token.rs
crates/temporal-graph/: Cargo.toml
crates/temporal-graph/src/: diff.rs  evolution.rs  graph.rs  history.rs  interval.rs  lib.rs  prediction.rs
crates/tordex-bin/: Cargo.toml
crates/tordex-bin/src/: main.rs
crates/tordex-collection/: Cargo.toml
crates/tordex-collection/src/: api.rs  browser_collector.rs  collector.rs  http_collector.rs  lib.rs  router.rs  store.rs
crates/tordex-core/: Cargo.toml
crates/tordex-core/src/: config.rs  error.rs  lib.rs  time.rs
crates/tordex-event-platform/: Cargo.toml
crates/tordex-event-platform/src/: lib.rs
crates/tordex-events/src/: bus.rs  events.rs  in_memory.rs  lib.rs  redis_bus.rs
crates/tordex-evidence/src/: lib.rs
crates/tordex-sessions/: Cargo.toml
crates/tordex-sessions/src/: lib.rs
crates/tordex-sources/src/: api.rs  registry.rs
crates/types/: Cargo.toml
crates/types/src/: events.rs  lib.rs
crates/ule/: Cargo.toml
crates/ule/examples/: compile_all.rs
crates/ule/src/: lib.rs
crates/ule/src/frontend/: go.rs  java.rs  javascript.rs  mod.rs  python.rs  rust.rs
crates/ule/tests/: integration_test.rs
crates/vifs/: Cargo.toml
crates/vifs/src/: lib.rs
crates/vm/: Cargo.toml
crates/vm/src/: executor.rs  instruction.rs  lib.rs  memory.rs  program.rs  register.rs  stack.rs  syscall.rs  vm.rs
docs/: architecture.md  index.md  technology-stack.md
evidence/evidence-store/: Cargo.toml
evidence/evidence-store/src/: lib.rs
migrations/: 0001_create_sources.sql  0001_initial.sql  0002_create_collections.sql  0002_kernel.sql
scripts/: dev-down.sh  dev-up.sh  test-integration.sh
services/api/: Cargo.toml
services/api/src/: lib.rs  main.rs
services/cli/: Cargo.toml
services/kernel/: Cargo.toml
services/kernel/src/: api.rs  config.rs  main.rs  persistent.rs  runtime.rs
services/scheduler/: Cargo.toml
services/scheduler/src/: api.rs  browser_collector.rs  collector.rs  http_collector.rs  lib.rs  router.rs  store.rs
services/worker/: Cargo.toml
services/worker/src/: main.rs
