[workspace]
resolver = "2"
members = [
    # Core crates
    "crates/core",
    "crates/config",
    "crates/types",
    "crates/events",
    "crates/policy",
    "crates/plugins",
    "crates/errors",

    # Source / data
    "crates/source-registry",

    # Services
    "services/api",
    "services/worker",
    "services/scheduler",
    "services/scheduler/sessions",
    "services/cli",

    # Collectors
    "collectors/http",
    "collectors/tor",
    "collectors/git",
    "collectors/rss",
    "collectors/filesystem",

    # Evidence & Knowledge
    "evidence/evidence-store",
    "knowledge/event-platform",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
rust-version = "1.85"
license = "MIT"
publish = false

[workspace.dependencies]
# Internal crates
tordex-core = { path = "crates/core" }
tordex-config = { path = "crates/config" }
tordex-types = { path = "crates/types" }
tordex-events = { path = "crates/events" }
tordex-policy = { path = "crates/policy" }
tordex-plugins = { path = "crates/plugins" }
tordex-errors = { path = "crates/errors" }
tordex-sources = { path = "crates/source-registry" }
tordex-collection = { path = "services/scheduler" }
tordex-sessions = { path = "services/scheduler/sessions" }
tordex-evidence = { path = "evidence/evidence-store" }
tordex-event-platform = { path = "knowledge/event-platform" }
tordex-api = { path = "services/api" }
tordex-worker = { path = "services/worker" }
tordex-cli = { path = "services/cli" }
tordex-http-collector = { path = "collectors/http" }
tordex-tor-collector = { path = "collectors/tor" }
tordex-git-collector = { path = "collectors/git" }
tordex-rss-collector = { path = "collectors/rss" }
tordex-filesystem-collector = { path = "collectors/filesystem" }

# Async runtime
tokio = { version = "1", features = ["full"] }
tokio-util = { version = "0.7", features = ["rt"] }
tokio-stream = "0.1"
futures = "0.3"

# HTTP / API
axum = { version = "0.7", features = ["macros"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["trace", "cors", "timeout"] }
hyper = { version = "1", features = ["full"] }

# HTTP client
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "gzip", "brotli"] }

# Storage / DB
sqlx = { version = "0.8", default-features = false, features = ["runtime-tokio-rustls", "postgres", "migrate", "json", "time", "macros"] }
redis = { version = "0.27", default-features = false, features = ["tokio-comp", "connection-manager", "streams"] }
s3 = { version = "0.1", default-features = false, features = ["rustls", "async"] }
qdrant-client = { version = "1.10", default-features = false, features = ["reqwest"] }

# IDs / Time
ulid = { version = "1", features = ["serde"] }
time = { version = "0.3", features = ["serde", "serde-well-known", "macros", "formatting"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Config
figment = { version = "0.10", features = ["env", "toml"] }

# Errors
thiserror = "1"
anyhow = "1"

# Logging / Tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt", "json"] }
tracing-opentelemetry = "0.27"
opentelemetry = { version = "0.26", features = ["trace"] }
opentelemetry-otlp = { version = "0.26", features = ["grpc-tonic"] }

# Metrics
metrics = "0.23"
metrics-exporter-prometheus = { version = "0.15", default-features = false, features = ["http-listener"] }

# Rate limiting
governor = "0.6"
nonzero_ext = "0.3"

# Browser (feature-gated)
chromiumoxide = { version = "0.7", default-features = false, features = ["tokio-runtime"] }
futures-util = "0.3"

# Misc
async-trait = "0.1"
bytes = "1"
http = "1"
url = "2"
once_cell = "1"
parking_lot = "0.12"

[workspace.lints.rust]
unsafe_code = "forbid"

[workspace.lints.clippy]
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }

# Allow noisy pedantic lints
module_name_repetitions = "allow"
must_use_candidate = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
similar_names = "allow"
struct_excessive_bools = "allow"
too_many_lines = "allow"
[profile.release]
lto = "thin"
codegen-units = 1
strip = true

[profile.dev]
debug = 1
