[workspace]
resolver = "2"
members = [
    "crates/core",
    "crates/config",
    "crates/types",
    "crates/vifs",
    "crates/drivers",
    "crates/fabric",
    "crates/processors",
    "crates/events",
    "crates/algorithms",
    "crates/knowledge",
    "crates/temporal-graph",
    "crates/repo-intel",
    "crates/package-intel",
    "crates/search",
    "crates/ai-runtime",
    "crates/agents",
    "crates/monitoring",
    "crates/decision",
    "crates/apps",
    "crates/cluster",
    "crates/memory",
    "crates/vm",
    "crates/tdxl",
    "crates/ule",
    "crates/gpu",
    "evidence/evidence-store",
    "services/api",
    "services/kernel",
    "services/worker",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
rust-version = "1.85"
license = "MIT"
publish = false

[workspace.dependencies]
# Internal crates
tordex-core = { path = "crates/core" }
tordex-config = { path = "crates/config" }
tordex-types = { path = "crates/types" }
tordex-events = { path = "crates/events" }
tordex-vifs = { path = "crates/vifs" }
tordex-drivers = { path = "crates/drivers" }
tordex-fabric = { path = "crates/fabric" }
tordex-processors = { path = "crates/processors" }
tordex-algorithms = { path = "crates/algorithms" }
tordex-knowledge = { path = "crates/knowledge" }
tordex-temporal-graph = { path = "crates/temporal-graph" }
tordex-repo-intel = { path = "crates/repo-intel" }
tordex-package-intel = { path = "crates/package-intel" }
tordex-search = { path = "crates/search" }
tordex-ai-runtime = { path = "crates/ai-runtime" }
tordex-agents = { path = "crates/agents" }
tordex-monitoring = { path = "crates/monitoring" }
tordex-decision = { path = "crates/decision" }
tordex-apps = { path = "crates/apps" }
tordex-cluster = { path = "crates/cluster" }
tordex-memory = { path = "crates/memory" }
tordex-vm = { path = "crates/vm" }
tordex-tdxl = { path = "crates/tdxl" }
tordex-gpu = { path = "crates/gpu" }
tordex-evidence = { path = "evidence/evidence-store" }

# Async runtime
tokio = { version = "1", features = ["full"] }
tokio-util = { version = "0.7", features = ["rt"] }
futures = "0.3"

# HTTP / API
axum = { version = "0.7", features = ["macros", "ws"] }
tower-http = { version = "0.6", features = ["trace", "cors"] }
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "gzip", "brotli", "json"] }

# Storage / DB
sqlx = { version = "0.8", default-features = false, features = ["runtime-tokio-rustls", "postgres", "migrate", "json", "time", "macros"] }
s3 = { version = "0.1", default-features = false, features = ["rustls", "async"] }
redis = { version = "0.27", default-features = false, features = ["tokio-comp", "connection-manager", "streams"] }

# IDs / Time
ulid = { version = "1", features = ["serde"] }
time = { version = "0.3", features = ["serde", "serde-well-known", "macros", "formatting"] }
sha2 = "0.10"
hex = "0.4"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Errors
thiserror = "1"
anyhow = "1"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }

# Processing
scraper = "0.21"
pulldown-cmark = "0.12"
lopdf = "0.34"
zip = "2"
quick-xml = "0.37"
image = "0.25"

# Misc
async-trait = "0.1"
regex = "1"
bytes = "1"
http = "1"
url = "2"
tower = { version = "0.4", features = ["util"] }

[workspace.lints.rust]
unsafe_code = "forbid"

[workspace.lints.clippy]
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }

# Allow noisy pedantic lints
module_name_repetitions = "allow"
must_use_candidate = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
similar_names = "allow"
struct_excessive_bools = "allow"
too_many_lines = "allow"
cast_possible_truncation = "allow"
cast_sign_loss = "allow"
cast_possible_wrap = "allow"

[profile.release]
lto = "thin"
codegen-units = 1
strip = true

[profile.dev]
debug = 1
