[package]
name = "tordex-events"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish.workspace = true

[lints]
workspace = true

[dependencies]
tordex-core = { workspace = true }

tokio = { workspace = true }
async-trait = { workspace = true }
futures = { workspace = true }
futures-util = "0.3"
async-stream = "0.3"
tokio-stream = "0.1"
tokio-util = { workspace = true }
bytes = { workspace = true }

serde = { workspace = true }
serde_json = { workspace = true }
time = { workspace = true }
ulid = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }

redis = { workspace = true }

[dev-dependencies]
tokio = { workspace = true }