[package]
name = "tordex-bin"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish.workspace = true

[lints]
workspace = true

[dependencies]
tordex-core = { workspace = true }
tordex-events = { workspace = true }
tordex-sources = { workspace = true }
tordex-collection = { workspace = true }
tordex-sessions = { workspace = true }
tordex-evidence = { workspace = true }
tordex-event-platform = { workspace = true }

axum = { workspace = true }
tokio = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }
hyper = { workspace = true }

sqlx = { workspace = true }
redis = { workspace = true }
s3 = { workspace = true }
qdrant-client = { workspace = true }

metrics = { workspace = true }
metrics-exporter-prometheus = { workspace = true }

tracing = { workspace = true }
tracing-subscriber = { workspace = true }

anyhow = { workspace = true }
thiserror = { workspace = true }
serde_json = { workspace = true }
time = { workspace = true }
async-trait = { workspace = true }
http = { workspace = true }