[package]
name = "tordex-collection"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish.workspace = true

[lints]
workspace = true

[features]
default = []
browser = ["dep:chromiumoxide"]

[dependencies]
tordex-core = { workspace = true }
tordex-events = { workspace = true }
tordex-sources = { workspace = true }

axum = { workspace = true }
tokio = { workspace = true }
async-trait = { workspace = true }
futures = { workspace = true }
bytes = { workspace = true }
http = { workspace = true }
url = { workspace = true }

reqwest = { workspace = true }
governor = { workspace = true }
nonzero_ext = { workspace = true }

serde = { workspace = true }
serde_json = { workspace = true }
time = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
sqlx = { workspace = true }
tokio-util = { workspace = true }
ulid = { workspace = true }

# Optional browser backend
chromiumoxide = { workspace = true, optional = true }

[dev-dependencies]
axum = { workspace = true }
hyper = { workspace = true }