[package]
name = "tordex-types"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish.workspace = true

[lints]
workspace = true

[features]
default = []
browser = []

[dependencies]
tordex-core = { workspace = true }

tokio-util = { workspace = true }
async-trait = { workspace = true }
bytes = { workspace = true }
http = { workspace = true }

serde = { workspace = true }
time = { workspace = true }
thiserror = { workspace = true }
