[package]
name = "tordex-vm"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish = false

[dependencies]
tordex-core = { workspace = true }
tordex-types = { workspace = true }
tordex-memory = { workspace = true }
tordex-knowledge = { workspace = true }
tordex-search = { workspace = true }
tordex-events = { workspace = true }
tordex-gpu = { workspace = true }

serde = { workspace = true }
serde_json = { workspace = true }
ulid = { workspace = true }
time = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
