[package]
name = "tordex-api"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish.workspace = true

[lints]
workspace = true

[dependencies]
tordex-core = { workspace = true }
tordex-config = { workspace = true }
tordex-types = { workspace = true }
tordex-evidence = { workspace = true }
tordex-processors = { workspace = true }
tordex-repo-intel = { workspace = true }

axum = { workspace = true }
tokio = { workspace = true }
tower-http = { workspace = true, features = ["trace"] }

sqlx = { workspace = true }
s3 = { workspace = true }

reqwest = { workspace = true }

sha2 = { workspace = true }
hex = { workspace = true }
ulid = { workspace = true }

serde = { workspace = true }
serde_json = { workspace = true }
time = { workspace = true }

tracing = { workspace = true }
tracing-subscriber = { workspace = true }

anyhow = { workspace = true }

[dev-dependencies]
tower = { workspace = true, features = ["util"] }
